macro(add_ledger_test _name)
  target_link_libraries(${_name} libledger)
  add_test(Ledger${_name} ${PROJECT_BINARY_DIR}/${_name})
  set_tests_properties(Ledger${_name}
    PROPERTIES ENVIRONMENT "TZ=${Ledger_TEST_TIMEZONE}")
endmacro()

include_directories(${PROJECT_SOURCE_DIR}/src)

if(BUILD_LIBRARY)
  add_executable(UtilTests t_times.cc t_format.cc)
  if(HAVE_BOOST_PYTHON)
    target_link_libraries(UtilTests ${Python_LIBRARIES})
  endif()
  add_ledger_test(UtilTests)

  add_executable(MathTests t_amount.cc t_commodity.cc t_balance.cc t_expr.cc t_value.cc t_account.cc t_xact.cc)
  set_source_files_properties(t_amount.cc t_value.cc PROPERTIES COMPILE_FLAGS "-Wno-unused-comparison")
  if(HAVE_BOOST_PYTHON)
    target_link_libraries(MathTests ${Python_LIBRARIES})
  endif()
  add_ledger_test(MathTests)

  add_executable(FilterTests t_filters.cc)
  if(HAVE_BOOST_PYTHON)
    target_link_libraries(FilterTests ${Python_LIBRARIES})
  endif()
  add_ledger_test(FilterTests)

  add_executable(TextualTests t_textual.cc)
  if(HAVE_BOOST_PYTHON)
    target_link_libraries(TextualTests ${Python_LIBRARIES})
  endif()
  add_ledger_test(TextualTests)
endif()
